[project]
name = "mas-lms"
version = "0.1.0"
description = "Multi-Agent Adaptive Learning System for TVU"
requires-python = ">=3.11"
authors = [{name = "TVU Team"}]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "redis>=5.0",
    "httpx>=0.24.0",
    "torch>=2.0",
    "transformers>=4.30",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.4",
    "isort>=5.12",
]

[tool.pytest.ini_options]
testpaths = ["tests", "agents/*/tests"]
python_files = "test_*.py"
addopts = "-v --cov=agents --cov=core --cov=domain"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
